samples/_failures_safe/1761451511_7bcbb1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6e01bad6.c: In function ‘main’:
./samples/SAFE/__tmp_6e01bad6.c:148:46: error: expected ‘)’ at end of input
  148 |             print_matrix(cols1, rows1, result
      |                         ~                    ^
      |                                              )
./samples/SAFE/__tmp_6e01bad6.c:148:13: error: expected declaration or statement at end of input
  148 |             print_matrix(cols1, rows1, result
      |             ^~~~~~~~~~~~
./samples/SAFE/__tmp_6e01bad6.c:148:13: error: expected declaration or statement at end of input
